Ch - 49 Errors & Exceptions in JAVA
👉 Errors & Exceptions

No matter how smart we are, errors are our constant companions. With practice, we keep getting better at finding & correcting them.

👉 There are three types of errors in Java : 
1. Syntax errors
2. Logical errors
3. Runtime errors --> Also called Exceptions!

----------------------------------------------------------------------------------------------------------------------------------------

👉 Synatx errors :

When computer finds something wrong with our program it throws a syntax error.

CODE SNIPPET :

class SyntaxErrorDemo {
    public static void main(String[] args) {
        int a = 9
        a = a + 3;
        d = 4;   // variable not declared
    }
}

OUTPUT COMPILATION ERROR :

SyntaxErrorDemo.java:4: error: ';' expected
        int a = 9
                 ^
SyntaxErrorDemo.java:6: error: cannot find symbol
        d = 4;
        ^
  symbol:   variable d

----------------------------------------------------------------------------------------------------------------------------------------

👉 Logical errors :

A logical error or a bug occurs when a program compiles and runs but dows the wrong thing.

--> Message deliverd wrongly
--> Wrong time of chats being displayed
--> incorrect redirects!

CODE SNIPPET :

class LogicalErrorDemo {
    public static void main(String[] args) {
        int a = 10;
        int b = 5;

        int sum = a - b; // mistake (should be +)
        System.out.println("Sum is: " + sum);
    }
}

OUTPUT          : Sum is : 5
EXPECTED OUTPUT : Sum is : 15

----------------------------------------------------------------------------------------------------------------------------------------

👉 Runtime errors :

Java may sometimes enocounter an error while the program is running. These are also called exception! These are encountered due to 
circumstances like bad input or resource constraints.

CODE SNIPPET 1 : Division by Zero

class RuntimeErrorDemo {
    public static void main(String[] args) {
        int a = 10;
        int b = 0;

        int result = a / b;  // runtime error
        System.out.println(result);
    }
}

OUTPUT : Exception in thread "main" java.lang.ArithmeticException: / by zero

CODE SNIPPET 2 : Array Index Out of Bounds

class RuntimeErrorDemo2 {
    public static void main(String[] args) {
        int arr[] = {1, 2, 3};

        System.out.println(arr[5]); // invalid index
    }
}

OUTPUT : Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException: 5

----------------------------------------------------------------------------------------------------------------------------------------

SUMMARY :
+---------------+--------------------+---------------+---------------+
| Error Type    | When it happens    | Program runs? | Example       |
+ ------------- + ------------------ + ------------- + ------------- +
| Syntax Error  | During compilation |  No           | Missing `;`   |
| Logical Error | After execution    |  Yes          | Wrong formula |
| Runtime Error | During execution   |  Crashes      | Divide by 0   |
+---------------+--------------------+---------------+---------------+


In Java, a try-catch (exception handling) block is used to handle runtime errors (exceptions) so that your program doesn’t crash abruptly.

Basic Syntax 

try {
    // Code that may cause an exception
} catch (ExceptionType e) {
    // Code to handle the exception
}


Sample Code : 

public class Main {
    public static void main(String[] args) {
        try {
            int a = 10;
            int b = 0;
            int result = a / b;   // This will cause an exception
            System.out.println(result);
        } catch (ArithmeticException e) {
            System.out.println("Cannot divide by zero!");
        }
    }
}

